	new file:   "Book/Visual C++ \344\270\262\345\217\243\351\200\232\344\277\241\347\274\226\347\250\213\345\256\236\350\267\265/\347\254\25412\347\253\240/SerialPortVxD/StdAfx.cpp"
	new file:   "Book/Visual C++ \344\270\262\345\217\243\351\200\232\344\277\241\347\274\226\347\250\213\345\256\236\350\267\265/\347\254\25412\347\253\240/SerialPortVxD/StdAfx.h"
	new file:   "Book/Visual C++ \344\270\262\345\217\243\351\200\232\344\277\241\347\274\226\347\250\213\345\256\236\350\267\265/\347\254\25412\347\253\240/SerialPortVxD/res/SerialPortVxD.ico"
	new file:   "Book/Visual C++ \344\270\262\345\217\243\351\200\232\344\277\241\347\274\226\347\250\213\345\256\236\350\267\265/\347\254\25412\347\253\240/SerialPortVxD/res/SerialPortVxD.rc2"
	new file:   "Book/Visual C++ \344\270\262\345\217\243\351\200\232\344\277\241\347\274\226\347\250\213\345\256\236\350\267\265/\347\254\25412\347\253\240/SerialPortVxD/resource.h"
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
ignore.2015/05/05.10_51_14.93.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   .gitignore
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
ignore.2015/05/05.10_53_51.43.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   .gitignore
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
tool_del_tmp.2015/05/05.10_58_18.99.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	new file:   "ToolKit/Bat/\346\211\271\351\207\217\345\210\240\351\231\244VC\344\270\264\346\227\266\346\226\207\344\273\266.txt"
