@@ -56,9 +56,10 @@
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-04-30 15:29:39 L.245'30621 T4052741146.K ~116 +----+----+----+----+----+
-     TimeCnt : //z 2015-04-30 15:29:27 L.245'30633 T4052741111.K ~5   +----+----+----+----+----+
-     Reg.Cnt : //z 2015-04-30 15:28:39 L.245'30681 T4052705209.K ~7   +----+----+----+----+----+
+     Zndex_E : //z 2015-05-06 17:41:46 L.239'22694 T1663861816.K ~127 +----+----+----+----+----+
+     TimeCnt : //z 2015-05-06 17:41:07 L.239'22733 T1663861685.K ~6   +----+----+----+----+----+
+     Reg.Cnt : //z 2015-05-06 17:40:53 L.239'22747 T1663825909.K ~8   +----+----+----+----+----+
+     #8   R+ : //z 2015-05-06 17:40:53 L.239'22747 T1663825909.K ~8     V+.127  L+.183  
      #7   R+ : //z 2015-04-30 15:28:39 L.245'30681 T4052705209.K ~7     V+.117  L+.176  
      #6   R+ : //z 2015-04-30 13:19:18 L.245'38442 T1468619220.K ~6     V+.109  L+.169  
      #5   R+ : //z 2015-04-28 16:26:55 L.247'27185 T3649066941.K ~5     V+.102  L+.162  
@@ -67,7 +68,9 @@
      #2   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~2     V+.19   L+.104  
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Version : //z 2015-04-30 15:29:39 L.245'30621 T4052741146.K ~123   R+.7    L+.177  --+----+
+     Version : //z 2015-05-06 17:41:46 L.239'22694 T1663861816.K ~135   R+.8    L+.186  --+----+
+     #7   V+ : //z 2015-05-06 17:41:40 L.239'22700 T1663861810.K ~133   R+.8    L+.185  
+     #6   R+ : //z 2015-05-06 17:40:53 L.239'22747 T1663825909.K ~127   R+.8    L+.184  V+.127  
      #6   R+ : //z 2015-04-30 15:28:39 L.245'30681 T4052705209.K ~117   R+.7    L+.177  V+.117  
      #6   V+ : //z 2015-04-30 15:28:34 L.245'30686 T4052705204.K ~114   R+.6    L+.172  
      #5   R+ : //z 2015-04-30 13:19:18 L.245'38442 T1468619220.K ~109   R+.6    L+.170  V+.109  
@@ -176,3 +179,9 @@ http://tex.loria.fr/prod-graph/zoonekynd/metapost/metapost.html
 //z 2015-04-30 15:29:27 L.245'30633 T4052741111.K[T5,L176,R7,V122]
 01. 了解下。
 #endregion //z 2015-04-30 15:28:39 L.245'30681 BG57IV3@XCL T4052705209.K.F4146951713-+----+----+
+
+#region 05-06 17:40 R#.8    @收集方方面面的模式和实例。
+//z 2015-05-06 17:41:07 L.239'22733 T1663861685.K[T6,L183,R8,V130]
+01. 这样利用起来最快。
+02. 但这也只是学习模式的一种。必然也有其局限性。
+#endregion //z 2015-05-06 17:40:53 L.239'22747 BG57IV3@XCL T1663825909.K.F4146951713-+----+----+
