@@ -561,3 +561,14 @@ Changes to be committed:
 	modified:   History.txt
 	new file:   "ToolKit/Bat/\346\211\271\351\207\217\345\210\240\351\231\244VC\344\270\264\346\227\266\346\226\207\344\273\266.txt"
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+"Pattern.EveryWhere".2015/05/06.17_42_14.09.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
